--- a/src/components/item-list/item-list.css
+++ b/src/components/item-list/item-list.css
@@ -1,6 +1,9 @@
 .item-list .list-group-item {
     cursor: pointer;
   }
+  .item-list{
+    margin-bottom: 15px;
+  }
   
   .item-list .list-group-item:hover {
     background-color: #444;
